# itch50-parser

./: .gitignore  CMakeLists.txt
src/: main.cpp
